question handler updated based on updated question model
