# docs/swagger.json
@@ -587,19 +587,6 @@
         "models.Question": {
             "type": "object",
             "properties": {
-                "answers": {
-                    "description": "One-to-Many",
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Answer"
-                    }
-                },
-                "comments": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Comment"
-                    }
-                },
                 "date": {
                     "type": "integer"
                 },
@@ -607,9 +594,6 @@
                     "type": "string"
                 },
                 "question_id": {
-                    "type": "integer"
-                },
-                "tag_idz": {
                     "type": "integer"
                 },
                 "tags": {
@@ -658,12 +642,6 @@
                 },
                 "user_name": {
                     "type": "string"
-                },
-                "user_questions": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Question"
-                    }
                 }
             }
         }
